Created an OrderController and some User SecurityConfiguration, permissions and securing endpoints